# avalon-back

./: .gitignore  .travis.yml  Dockerfile  README.md  app.py  app_utils.py  concat.py  docker-compose.yml  pip.conf  pylib.py  requirements.txt  start_app.sh  test.py  test_rethink.py
app/: app.py  bdd_utils.py  db_utils.py  games.py  mp3.py  pylib.py  quest.py  quests.py  rules.py  test_requests.py
app/requirements/: requirements.txt
avalon-api/: api.py  api_utils.py  app.py  games.py  pylib.py  quests.py
avalon-api/requirements/: requirements.txt
avalon-py/: .gitignore  LICENSE.txt  MANIFEST.in  README.md  setup.cfg
avalon-py/src/avalon/: db_utils.py  exception.py  games.py  mp3.py  quests.py  rules.py
avalon-py/src/avalon/resources/: rules.json
avalon-py/test/: test_mp3.py  test_rules.py
