[metadata]
name = avalon
version = attr: %(name)s.__version__
description = avalon: avalon package
long_description = file: README.md
author = Romain Thierry-Laumont
licence = MIT
license_files = LICENCE.txt

[options]
include_package_data = true
packages = find:
package_dir=
    =src
install_requires =
  pydub==0.25.1
  requests==2.26.0

[options.packages.find]
where=src
exclude =
  test
  *.egg-info
  *.pyc

[tox:tox]
envlist = py37

[testenv]
deps =
  pytest
  pytest-cov
install_command =
  {envpython} -m pip install --index-url http://sopretty.me:4040/root/pypi/+simple --extra-index-url http://sopretty.me:4040/romainTL/pkg/+simple --trusted-host=sopretty.me {opts} {packages} --no-cache-dir
commands =
  {envpython} -m pytest -v --cov-report html --cov={[metadata]name} test

[tool:pytest]
testpaths = test
